src/components/Modal.css
.ModalOverlay{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: #13182aeb;
    cursor: pointer;
    z-index: 1;
}

.Modal{
    cursor: auto;
}

.Modal:focus {
    outline: none;
}

.Modal__close-button{
    display: block;
    position: absolute;
    top: 20px;
    right: 20px;
    height: 48px;
    width: 48px;
    transition: all 0.2s ease-in-out;
    border-radius: 24px;
    cursor: pointer;
    background: #242F4B;
    pointer-events: none;
}

.Modal__close-button img{
    width: 48px;
    height: 48px;
}

